# puzzles

./: .gitignore
AdventOfCode2015/: Manifest.toml  Project.toml
AdventOfCode2015/src/: AdventOfCode2015.jl  day01.jl  day02.jl  day03.jl  day04.jl  day05.jl  day06.jl  day07.jl  day08.jl  day09.jl  day10.jl  day11.jl  day12.jl  day13.jl  day14.jl  day15.jl  day16.jl  day17.jl  day18.jl  day19.jl  day22.jl  day23.jl  day24.jl  day25.jl  sf.jl
AdventOfCode2015/test/: runtests.jl
AdventOfCode2018/: CMakeLists.txt
AdventOfCode2018/include/common/: array2d.hpp  elfasm.def  elfasm.hpp  point.hpp  value_array.hpp
AdventOfCode2018/src/: CMakeLists.txt  day01.cpp  day03.cpp  day04.cpp  day05.cpp  day08.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day6.cpp  day7.cpp  day9.cpp
AdventOfCode2018/test/: day03-output.txt  day04-output.txt  day05-output.txt  day06-output.txt  day07-output.txt  day09-output.txt  day11-output.txt  day12-output.txt  day13-output.txt  day14-output.txt  day8-output.txt  test_runner.py
AdventOfCode2019/: CMakeLists.txt
AdventOfCode2019/src/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day19.cpp  day20.cpp  template.cpp
AdventOfCode2019/src/aoc/: intcode.cpp
AdventOfCode2019/test/: day01-output.txt  day02-output.txt  day04-output.txt  day05-output.txt  day06-output.txt  day08-output.txt  day09-output.txt  day11-output.txt  day12-output.txt  day14-output.txt  day15-output.txt  day16-output.txt  day17-output.txt  day19-output.txt  day20-output.txt
AdventOfCode2020/: CMakeLists.txt
AdventOfCode2020/include/: robin_hood.hpp
AdventOfCode2020/src/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
AdventOfCode2020/test/: day02-output.txt  day03-output.txt  day05-output.txt  day10-output.txt  day11-output.txt  day13-output.txt  day15-output.txt  day18-output.txt  day19-input.txt  day20-output.txt  day25-output.txt
AdventOfCode2021/: .clang-format  CMakeLists.txt
AdventOfCode2021/src/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  template.cpp
AdventOfCode2021/test/: day05-output.txt  day07-output.txt  day08-output.txt  day09-output.txt  day10-output.txt  day11-output.txt  day12-output.txt  day13-output.txt  day15-output.txt  day17-output.txt  day20-output.txt
AdventOfCode2022/: build.zig
AdventOfCode2022/src/: argparse.zig  day01.zig  day02.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  day08.zig  day09.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.zig  day17.zig  day18.zig  day19.zig  day20.zig  day21.zig  day22.zig  day23.zig  day24.zig  day25.zig  resettable_arena_allocator.zig  runner.zig
AdventOfCode2022/test/: day01-output.txt  day05-output.txt  day06-output.txt  day08-output.txt  day09-output.txt  day10-output.txt  day11-output.txt  day14-output.txt  day15-output.txt  day17-output.txt  day18-output.txt  day23-output.txt  day25-output.txt
AdventOfCode2023/: AdventOfCode2023.gpr  README.md  test-all.py
AdventOfCode2023/advent/: advent.gpr
AdventOfCode2023/src/: advent-directions.adb  advent-directions.ads  advent-integer_vector_math.ads  advent-intervals.adb  advent-intervals.ads  advent-parsers-integers.adb  advent.adb  advent.ads  (+25 more)
AdventOfCode2024/: AdventOfCode2024.gpr  README.md
AdventOfCode2025/: AdventOfCode2025.gpr
cmake/: aoc_common.cmake
extra/: README.md
scripts/: aoctool.py  test_runner.py
(+153 files in other folders)
