function(add_day n)
  add_executable("day${n}" "day${n}.cpp")
  set_property(TARGET "day${n}" PROPERTY CXX_STANDARD 20)
  add_test(NAME "day${n}-test" COMMAND ${PYTHON_BIN} "${CMAKE_SOURCE_DIR}/test/test_runner.py" $<TARGET_FILE:day${n}> "${CMAKE_SOURCE_DIR}/test/day${n}-input.txt" "${CMAKE_SOURCE_DIR}/test/day${n}-output.txt")
  install(TARGETS "day${n}" RUNTIME DESTINATION .)
endfunction()

add_day(1)
add_day(2)
add_day(3)
add_day(4)
add_day(5)
add_day(6)
add_day(7)
add_day(8)
add_day(9)
add_day(10)
add_day(11)
add_day(12)
add_day(13)
add_day(14)
add_day(15)
add_day(16)
add_day(17)
add_day(18)
add_day(19)
add_day(20)
add_day(21)
add_day(22)
add_day(23)
add_day(24)
add_day(25)