add_library(aoc aoc/intcode.cpp)
target_include_directories(aoc PUBLIC "${CMAKE_SOURCE_DIR}/include")
set_property(TARGET aoc PROPERTY CXX_STANDARD 20)

if(MSVC)
  target_compile_options(aoc PRIVATE /W3)
else()
  target_compile_options(aoc PRIVATE -Wall -Wextra -pedantic)
endif()

function(add_day n)
  add_executable("day${n}" "day${n}.cpp")
  target_link_libraries("day${n}" sr::sr fmt::fmt aoc)
  set_property(TARGET "day${n}" PROPERTY CXX_STANDARD 20)

  if(NOT "${ARGV}" MATCHES "NO_TEST")
    add_test(NAME "day${n}-test" COMMAND ${PYTHON_BIN} "${CMAKE_SOURCE_DIR}/test/test_runner.py" $<TARGET_FILE:day${n}> "${CMAKE_SOURCE_DIR}/test/day${n}-input.txt" "${CMAKE_SOURCE_DIR}/test/day${n}-output.txt")
  endif()
  install(TARGETS "day${n}" RUNTIME DESTINATION .)

  if(MSVC)
    target_compile_options("day${n}" PRIVATE /W3)
  else()
    target_compile_options("day${n}" PRIVATE -Wall -Wextra -pedantic)
  endif()
endfunction()

add_day(01)
add_day(02)
add_day(03)
add_day(04)
add_day(05)
add_day(06)
add_day(07)
add_day(08)
add_day(09)
add_day(10)
add_day(11)
add_day(12)
add_day(13)
add_day(14 NO_TEST)
add_day(15)
add_day(16 NO_TEST)
add_day(17 NO_TEST)
add_day(19 NO_TEST)
add_day(20)
