add_library(aoc aoc/intcode.cpp)
target_include_directories(aoc PUBLIC "${CMAKE_SOURCE_DIR}/include")
set_property(TARGET aoc PROPERTY CXX_STANDARD 20)

aoc_add_day(01)
aoc_add_day(02)
aoc_add_day(03)
aoc_add_day(04)
aoc_add_day(05)
aoc_add_day(06)
aoc_add_day(07)
aoc_add_day(08)
aoc_add_day(09)
aoc_add_day(10)
aoc_add_day(11)
aoc_add_day(12)
aoc_add_day(13)
aoc_add_day(14 NO_TEST)
aoc_add_day(15)
aoc_add_day(16 NO_TEST)
aoc_add_day(17 NO_TEST)
aoc_add_day(19 NO_TEST)
aoc_add_day(20)

foreach(tgt ${AOC_TARGETS})
	target_link_libraries(${tgt} aoc)
endforeach()
