function(add_day n)
  add_executable("day${n}" "day${n}.cpp")
  target_link_libraries("day${n}" sr::sr fmt::fmt)
  set_property(TARGET "day${n}" PROPERTY CXX_STANDARD 20)

  if(NOT "${ARGV}" MATCHES "NO_TEST")
    add_test(NAME "day${n}-test" COMMAND ${PYTHON_BIN} "${CMAKE_SOURCE_DIR}/test/test_runner.py" $<TARGET_FILE:day${n}> "${CMAKE_SOURCE_DIR}/test/day${n}-input.txt" "${CMAKE_SOURCE_DIR}/test/day${n}-output.txt")
  endif()
  install(TARGETS "day${n}" RUNTIME DESTINATION .)

  if(MSVC)
    target_compile_options("day${n}" PRIVATE /W3 /constexpr:steps2048576)
  else()
    target_compile_options("day${n}" PRIVATE -Wall -Wextra -pedantic -march=native)
  endif()
endfunction()

add_day(01)
add_day(02)
add_day(03)
add_day(04)
add_day(05)
add_day(06)
add_day(07)
add_day(08)
add_day(09)
add_day(10)
add_day(11)
add_day(12)
add_day(13)
add_day(14)
add_day(15)
add_day(16)
add_day(17)
add_day(18)
add_day(19 NO_TEST)
add_day(20)
add_day(21)
add_day(22)
add_day(23)
add_day(24)
add_day(25)
